2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* general/header.php, godmode/db/db_audit.php,
	godmode/reporting/reporting_builder.item_editor.php:  cleaned html and fixed
	unclose html tags in source code, the eclipse warm to me.

2010-06-02  Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/sla_view.php, operation/agentes/datos_agente.php,
	operation/agentes/estado_ultimopaquete.php: Updated header.

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* include/auth/ldap.php
	include/fgraph.php
	godmode/reporting/graph_builder.php: Changed the deprecated
	function split() by explode() function for bug: 2989970

2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_plugin.php: fixed, now show the
	description of plugin selected.
	
	* godmode/servers/plugin.php: added the response to ajax for query the
	report description.
	
	Fixes: #3008494

2010-06-02  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php: added the code for
	show a new item event_report_group.

2010-06-02  Ramon Novoa  <rnovoa@artica.es>

	* operation/messages/message.php: Small fixes. Fixed bug #3008779.

	* godmode/servers/modificar_server.php: Ask for confirmation before
	  deleting a server.

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed the error
	showed in manage agents into alerts when the agent 
	has not modules for bug 3010359

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Fixed the fullscreen
	icon out of the header for bug: 3004025

2010-06-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/agentes/status_monitor.php
	operation/agentes/group_view.php: Fixed the group
	view table values for bug 3010321 and added the log4x